--- a/react/components/results.scss
+++ b/react/components/results.scss
@@ -5,7 +5,10 @@ $blue: #66b5af;
   min-height: 600px;
   display: block;
   position: relative;
-  margin: 10px auto;
+  margin-top: 10px auto;
+  margin-bottom: 10px auto;
+  margin-right: 10px auto;
+  margin-left: 32px;
   padding: 0 10px 30px 10px;
 
   .summary {
